--- a/src/index.css
+++ b/src/index.css
@@ -44,17 +44,20 @@ body {
   font-size: 1.3rem;
 }
 .description{
-  font-size: 1.8rem;
-  font-weight: bold;
-  margin: 20px 0px;
+  font-size: 2.5rem;
+  margin: 30px 0px;
 }
 .location{
   font-size: 2.5rem;
-  margin-bottom: 20px;
+  margin: 40px 0px;
 }
 .currTemp{
   font-size: 4rem;
-  margin: 50px 0px;
+  margin: auto;
+  width: 130px;
+  padding: 25px;
+  border-radius: 20px;
+  background-color: rgba(255, 255, 255, 0.3);
 }
 .weekForecastBox{
   margin: 2rem 2rem;
